--- a/bittr/Base.lproj/Main.storyboard
+++ b/bittr/Base.lproj/Main.storyboard
@@ -2865,7 +2865,7 @@
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Bb-vk-7Mv" userLabel="Description View">
                                                                 <rect key="frame" x="10" y="140" width="323" height="52"/>
                                                                 <subviews>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4w8-dl-bdI">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4w8-dl-bdI">
                                                                         <rect key="frame" x="15" y="14" width="74" height="14"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="5" id="S3F-Le-G8Q"/>
@@ -2875,8 +2875,8 @@
                                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="This is a very long and detailed description with lots of words." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKo-HK-B1b" userLabel="Description Text">
-                                                                        <rect key="frame" x="106.66666666666663" y="14" width="201.33333333333337" height="28"/>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a very long and detailed description with lots of words." textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKo-HK-B1b" userLabel="Description Text">
+                                                                        <rect key="frame" x="106.66666666666664" y="14" width="201.33333333333337" height="28"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="5" id="rkb-Rw-xLZ"/>
                                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="5" id="sgL-fJ-dqR"/>
@@ -6714,18 +6714,52 @@
                                                                             <action selector="lightningIDTapped:" destination="EgO-Th-Xdr" eventType="touchUpInside" id="dKf-D1-t1f"/>
                                                                         </connections>
                                                                     </button>
+                                                                    <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AKd-iH-E63">
+                                                                        <rect key="frame" x="318" y="0.0" width="5" height="0.0"/>
+                                                                        <subviews>
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rectangle.portrait.and.arrow.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Yea-7j-MSX" userLabel="Open Url Image">
+                                                                                <rect key="frame" x="-30" y="-10.666666666666668" width="20" height="19.666666666666668"/>
+                                                                                <color key="tintColor" red="0.61694325819999996" green="0.63093821329999999" blue="0.67292307839999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                                <constraints>
+                                                                                    <constraint firstAttribute="height" constant="20" id="aPJ-Ly-Kxs"/>
+                                                                                    <constraint firstAttribute="width" constant="20" id="weF-hm-cOd"/>
+                                                                                </constraints>
+                                                                            </imageView>
+                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xid-nO-rmJ">
+                                                                                <rect key="frame" x="0.0" y="0.0" width="5" height="0.0"/>
+                                                                                <state key="normal" title="Button"/>
+                                                                                <buttonConfiguration key="configuration" style="plain"/>
+                                                                                <connections>
+                                                                                    <action selector="openUrlButtonTapped:" destination="EgO-Th-Xdr" eventType="touchUpInside" id="Wan-z3-8Hl"/>
+                                                                                </connections>
+                                                                            </button>
+                                                                        </subviews>
+                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" constant="5" id="07Y-Sj-Ty1"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="Xid-nO-rmJ" secondAttribute="bottom" id="0Nd-ep-5aj"/>
+                                                                            <constraint firstItem="Xid-nO-rmJ" firstAttribute="leading" secondItem="AKd-iH-E63" secondAttribute="leading" id="2zS-12-3co"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="Xid-nO-rmJ" secondAttribute="trailing" id="ExV-8n-oX5"/>
+                                                                            <constraint firstItem="Yea-7j-MSX" firstAttribute="centerY" secondItem="AKd-iH-E63" secondAttribute="centerY" constant="-1" id="GM3-bD-cdD"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="Yea-7j-MSX" secondAttribute="trailing" constant="15" id="fGb-17-fhw"/>
+                                                                            <constraint firstItem="Xid-nO-rmJ" firstAttribute="top" secondItem="AKd-iH-E63" secondAttribute="top" id="gDK-Hk-FPa"/>
+                                                                        </constraints>
+                                                                    </view>
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="trailing" secondItem="WgC-re-OnU" secondAttribute="trailing" id="32Q-KX-IMB"/>
+                                                                    <constraint firstItem="WgC-re-OnU" firstAttribute="trailing" secondItem="H74-2Z-o2S" secondAttribute="trailing" id="32Q-KX-IMB"/>
                                                                     <constraint firstItem="S6p-yg-oBm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="98q-ad-db9" secondAttribute="trailing" constant="15" id="5Bw-Ap-P05"/>
                                                                     <constraint firstItem="WgC-re-OnU" firstAttribute="leading" secondItem="H74-2Z-o2S" secondAttribute="leading" id="AVz-cA-Oqp"/>
                                                                     <constraint firstItem="98q-ad-db9" firstAttribute="centerY" secondItem="H74-2Z-o2S" secondAttribute="centerY" constant="1" id="B2G-HG-HQF"/>
                                                                     <constraint firstItem="S6p-yg-oBm" firstAttribute="centerY" secondItem="98q-ad-db9" secondAttribute="centerY" constant="-1" id="BKP-Lo-ciu"/>
                                                                     <constraint firstAttribute="height" id="F6e-Er-6KA"/>
+                                                                    <constraint firstItem="AKd-iH-E63" firstAttribute="bottom" secondItem="H74-2Z-o2S" secondAttribute="bottom" id="GLy-Ne-Tas"/>
                                                                     <constraint firstItem="98q-ad-db9" firstAttribute="leading" secondItem="H74-2Z-o2S" secondAttribute="leading" constant="15" id="T0u-kz-ufP"/>
-                                                                    <constraint firstAttribute="trailing" secondItem="S6p-yg-oBm" secondAttribute="trailing" constant="15" id="hMC-oa-3cZ"/>
-                                                                    <constraint firstAttribute="bottom" secondItem="WgC-re-OnU" secondAttribute="bottom" id="ozA-Oy-MLI"/>
+                                                                    <constraint firstItem="AKd-iH-E63" firstAttribute="top" secondItem="H74-2Z-o2S" secondAttribute="top" id="efv-zj-G2E"/>
+                                                                    <constraint firstItem="S6p-yg-oBm" firstAttribute="trailing" secondItem="AKd-iH-E63" secondAttribute="leading" constant="-10" id="hMC-oa-3cZ"/>
+                                                                    <constraint firstItem="WgC-re-OnU" firstAttribute="bottom" secondItem="H74-2Z-o2S" secondAttribute="bottom" id="ozA-Oy-MLI"/>
+                                                                    <constraint firstItem="AKd-iH-E63" firstAttribute="trailing" secondItem="H74-2Z-o2S" secondAttribute="trailing" id="pva-I8-prO"/>
                                                                     <constraint firstItem="WgC-re-OnU" firstAttribute="top" secondItem="H74-2Z-o2S" secondAttribute="top" id="rJs-E8-GA9"/>
                                                                 </constraints>
                                                             </view>
@@ -7279,6 +7313,10 @@
                         <outlet property="profitViewHeight" destination="KRQ-DO-xCr" id="6gF-og-ZcZ"/>
                         <outlet property="questionButton" destination="Nhy-0W-jZJ" id="qCm-RE-doy"/>
                         <outlet property="questionCircle" destination="wO6-yu-51d" id="Mvt-Od-Vl1"/>
+                        <outlet property="refundUrlBox" destination="AKd-iH-E63" id="jvn-Sm-ul0"/>
+                        <outlet property="refundUrlButton" destination="Xid-nO-rmJ" id="G06-H4-Qda"/>
+                        <outlet property="refundUrlImage" destination="Yea-7j-MSX" id="jKc-bJ-JlA"/>
+                        <outlet property="refundUrlWidth" destination="07Y-Sj-Ty1" id="hIW-nh-emQ"/>
                         <outlet property="swapIDLabel" destination="FKS-42-XAA" id="K9z-iX-5pu"/>
                         <outlet property="swapIDTitle" destination="RCd-TY-qRH" id="GP6-5Y-hkr"/>
                         <outlet property="swapIdButton" destination="Hxl-iR-6qT" id="qwM-jw-THx"/>
@@ -8561,7 +8599,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ba2-hN-AG8">
-                                                                <rect key="frame" x="168" y="15.000000000000037" width="16" height="14.66666666666667"/>
+                                                                <rect key="frame" x="168" y="15.000000000000036" width="16" height="14.666666666666671"/>
                                                                 <color key="tintColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="16" id="OTg-np-EBL"/>
@@ -13851,10 +13889,10 @@
         <image name="yellowcurve" width="400" height="15"/>
         <image name="yellowcurvedark" width="400" height="15"/>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
